--- a/echo-editor/static/styles.css
+++ b/echo-editor/static/styles.css
@@ -110,6 +110,10 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: center;
 }
 
+.page-padded {
+    margin-top: 40px;
+}
+
 .page-wrapper {
     width: 90%;
     max-width: 1000px;
@@ -264,6 +268,35 @@ h1, h2, h3, h4, h5, h6 {
 
 .cm-error-secondary-button > img {
     height: 12px;
+}
+
+/*endregion*/
+
+
+/*region: Inputs*/
+
+.label {
+    display: flex;
+    flex-direction: column;
+    color: var(--text-secondary);
+    font-size: 11px;
+    font-weight: 600;
+    margin-top: 12px;
+}
+
+.text-input {
+    width: 100%;
+    margin-top: 4px;
+    padding: 6px 8px;
+
+    color: var(--text);
+    background-color: var(--editor);
+
+    font-weight: 400;
+    font-size: 14px;
+
+    border: none;
+    border-radius: 4px;
 }
 
 /*endregion*/
